@@ -334,6 +334,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14385) "Move subpages" option no longer tries to move to invalid titles
 * (bug 14386) Fix subpage namespace oddity when moving a talk page
 * (bug 11771) Signup form now not shown if in read-only mode.
+* (bug 10080) Users can now modify an existing block without unblocking first.
 
 === API changes in 1.13 ===
 
